src/objects/PSA_Rate__c.object
<CustomObject>
    <description>Custom - Records the suggested bill rate or average cost rate for a resource role in a region, practice, or group (for example, the bill rate for a Consultant in Europe) or for projects on an account. Use rate cards early in the staffing process, to provide information on likely billing and cost rates when creating resource requests. If configured, start and end dates on rate cards determine if the rate only applies to resource requests which lie between the given dates.</description>
    <fields>
        <fullName>PSA_Average_Cost_Rate__c</fullName>
        <description>PSA Average cost rate</description>
        <label>Average Cost Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Bill_Rate_Amount__c</fullName>
        <description>PSA Bill rate for resource</description>
        <label>Bill Rate</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Bill_Rate_Set__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>PSA Bill Rate Set</description>
        <label>PSA Bill Rate Set</label>
        <referenceTo>PSA_Rate_Set__c</referenceTo>
        <relationshipName>PSA_Bill_Rates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Level__c</fullName>
        <description>PSA Billing Level</description>
        <label>Billing Level</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>105</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast Blended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_End_Date__c</fullName>
        <description>PSA End date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Start_Date__c</fullName>
        <description>PSA Start date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>PSA Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Billing_Level__c</columns>
        <columns>PSA_Start_Date__c</columns>
        <columns>PSA_End_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>PSA_Bill_Rate_Amount__c</columns>
        <columns>PSA_Average_Cost_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Global_Rates</fullName>
        <columns>NAME</columns>
        <columns>PSA_Bill_Rate_Set__c</columns>
        <columns>PSA_Billing_Level__c</columns>
        <columns>PSA_Bill_Rate_Amount__c</columns>
        <columns>PSA_Average_Cost_Rate__c</columns>
        <columns>PSA_Start_Date__c</columns>
        <columns>PSA_End_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Bill_Rate_Set__c</field>
            <operation>equals</operation>
            <value>2015 Global Rate Set</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <label>Global Rates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PBR-{0000}</displayFormat>
        <label>Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>